# visual-auditor

./: .gitignore  README.md  config-overrides.js  package-lock.json  package.json  rollup.config.notebook.js
visual-auditor-package/notebook-widget/: README.md  pyproject.toml  setup.py
visual-auditor-package/notebook-widget/visual-auditor/: __init__.py  adult.ipynb  adult_common_samples.json  adult_reverse_common_samples.json  adult_reverse_overlapping_samples.json  adult_reverse_slices.json  adult_slices.json  bundle.html  common_samples.json  cp_common_samples.json  cp_overlapping_samples.json  cp_reverse_common_samples.json  cp_reverse_overlapping_samples.json  cp_reverse_slices.json  customer_churn.ipynb  gc_common_samples.json  gc_overlapping_samples.json  gc_reverse_common_samples.json  gc_reverse_overlapping_samples.json  gc_reverse_slices.json  gc_slices.json  german_credit.ipynb  overlapping_samples.json  slices.json  visual_auditor.py  visualauditor.py
visual-auditor-package/notebook-widget/visual-auditor/.ipynb_checkpoints/: customer_churn-checkpoint.ipynb  german_credit-checkpoint.ipynb  main-checkpoint.ipynb
visual-auditor-package/notebook-widget/visual-auditor/data/: customer_churn_prediction.csv  (+1 more)
visual-auditor-package/notebook-widget/visual_auditor/: __init__.py  adult_common_samples.json  adult_reverse_common_samples.json  bundle.html  cp_slices.json  gc_common_samples.json  gc_overlapping_samples.json  gc_reverse_overlapping_samples.json  gc_reverse_slices.json  gc_slices.json  overlapping_samples.json  slice_finder.py  visual_auditor.py
(+106 files in other folders)
